syntax = "proto3";
package sac.v1;
option go_package = "g.echo.tech/dev/sac/gen/sac/v1;sacv1";

import "google/api/annotations.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";
import "sac/v1/common.proto";
import "sac/v1/skill.proto";

message Agent {
  int64 id = 1;
  string name = 2;
  string description = 3;
  string icon = 4;
  string instructions = 5;
  google.protobuf.Struct config = 6;
  int64 created_by = 7;
  optional string cpu_request = 8;
  optional string cpu_limit = 9;
  optional string memory_request = 10;
  optional string memory_limit = 11;
  google.protobuf.Timestamp created_at = 12;
  google.protobuf.Timestamp updated_at = 13;
  repeated AgentSkill installed_skills = 14;
}

message AgentSkill {
  int64 id = 1;
  int64 agent_id = 2;
  int64 skill_id = 3;
  int32 order = 4;
  int32 synced_version = 5;
  google.protobuf.Timestamp created_at = 6;
  Skill skill = 7;
}

message CreateAgentRequest {
  string name = 1;
  string description = 2;
  string icon = 3;
  string instructions = 4;
  google.protobuf.Struct config = 5;
}

message UpdateAgentRequest {
  optional string name = 1;
  optional string description = 2;
  optional string icon = 3;
  optional string instructions = 4;
  google.protobuf.Struct config = 5;
}

message InstallSkillRequest {
  int64 skill_id = 1;
}

message AgentStatus {
  int64 agent_id = 1;
  string pod_name = 2;
  string status = 3;
  int32 restart_count = 4;
  string cpu_request = 5;
  string cpu_limit = 6;
  string memory_request = 7;
  string memory_limit = 8;
  string cpu_usage = 9;
  string memory_usage = 10;
  double cpu_usage_percent = 11;
  double memory_usage_percent = 12;
}

message ClaudeMDPreview {
  string readonly = 1;
  string instructions = 2;
}

message AgentListResponse {
  repeated Agent agents = 1;
}

message AgentStatusListResponse {
  repeated AgentStatus statuses = 1;
}

// Request messages for RPCs that need path/query params
message GetAgentRequest {
  int64 id = 1;
}

message UpdateAgentByIdRequest {
  int64 id = 1;
  optional string name = 2;
  optional string description = 3;
  optional string icon = 4;
  optional string instructions = 5;
  google.protobuf.Struct config = 6;
}

message InstallSkillByAgentRequest {
  int64 agent_id = 1;
  int64 skill_id = 2;
}

message UninstallSkillRequest {
  int64 agent_id = 1;
  int64 skill_id = 2;
}

service AgentService {
  rpc ListAgents(Empty) returns (AgentListResponse) {
    option (google.api.http) = { get: "/api/agents" };
  }
  rpc GetAgent(GetAgentRequest) returns (Agent) {
    option (google.api.http) = { get: "/api/agents/{id}" };
  }
  rpc CreateAgent(CreateAgentRequest) returns (Agent) {
    option (google.api.http) = { post: "/api/agents", body: "*" };
  }
  rpc UpdateAgent(UpdateAgentByIdRequest) returns (Agent) {
    option (google.api.http) = { put: "/api/agents/{id}", body: "*" };
  }
  rpc DeleteAgent(GetAgentRequest) returns (SuccessMessage) {
    option (google.api.http) = { delete: "/api/agents/{id}" };
  }
  rpc RestartAgent(GetAgentRequest) returns (SuccessMessage) {
    option (google.api.http) = { post: "/api/agents/{id}/restart" };
  }
  rpc InstallSkill(InstallSkillByAgentRequest) returns (SuccessMessage) {
    option (google.api.http) = { post: "/api/agents/{agent_id}/skills", body: "*" };
  }
  rpc UninstallSkill(UninstallSkillRequest) returns (SuccessMessage) {
    option (google.api.http) = { delete: "/api/agents/{agent_id}/skills/{skill_id}" };
  }
  rpc SyncSkills(GetAgentRequest) returns (SuccessMessage) {
    option (google.api.http) = { post: "/api/agents/{id}/sync-skills" };
  }
  rpc GetAgentStatuses(Empty) returns (AgentStatusListResponse) {
    option (google.api.http) = { get: "/api/agent-statuses" };
  }
  rpc PreviewClaudeMD(GetAgentRequest) returns (ClaudeMDPreview) {
    option (google.api.http) = { get: "/api/agents/{id}/claude-md-preview" };
  }
}
